[tool.poetry]
name = "python-phone-sms"
version = "0.1.0"
description = ""
authors = ["Yuldoshaliyev1 <akmalyuldoshaliev@gmail.com>"]
readme = "README.md"
packages = [{include = "python_phone_sms"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
