[tool.poetry]
name = "python-phone-sms"
version = "0.1.0"
description = ""
authors = ["Yuldoshaliyev1 <akmalyuldoshaliev@gmail.com>"]
readme = "README.md"
packages = [{include = "python_phone_sms"}]

[tool.poetry.dependencies]
python = "^3.10"
certifi = "^2022.12.7"
charset-normalizer = "^3.1.0"
idna = "^3.4"
infobip-api-python-client = "^3.0.1"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
six = "^1.16.0"
urllib3 = "^1.26.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
